# snackbox

./: README.md  pyproject.toml
snackbox/: main.py
snackbox/snacks/: helpers.py
snackbox/snacks/save/: helpers.py  save.md  save.py
snackbox/snacks/save/tests/: fakes.py  test_save.py
snackbox/snacks/start/: start.py
snackbox/snacks/start/templates/: gitignore_template.txt
snackbox/snacks/start/tests/: test_start.py
